...
    const _FeatureCardData(
      title: 'Bi-Weekly Mind Check-In',
      image: 'https://www.21kschool.com/us/wp-content/uploads/sites/37/2024/12/Difference-Between-Assessment-and-Evaluation-A-Comprehensive-Guide.png',
      route: 'student-mtq',
    ),
    const _FeatureCardData(
      title: 'My Mood Journal',
      image: 'https://t3.ftcdn.net/jpg/00/87/64/32/360_F_87643201_KtLtcqArlgjZ8zSFEPM48otNrRRW8RuJ.jpg',
      route: 'student-mood-journal',
    ),
    const _FeatureCardData(
      title: 'Daily Mood Check-in',
      image: 'https://news.harvard.edu/gazette/wp-content/uploads/2023/08/Phonewithmoodioons.jpg',
...
    ),
  ];

  final List<_FeatureCardData> _supportTools = [
    const _FeatureCardData(
      key: Key('breathing_exercises_card'),
      title: 'Breathing Exercises',
      image: 'https://www.bhf.org.uk/-/media/images/information-support/heart-matters/2023/december/wellbeing/deep-breathing-620x400.png',
      route: 'student-breathing-exercises',
    ),
    const _FeatureCardData(
      title: 'Wellness Resources',
      image: 'https://cdn.brewersassociation.org/wp-content/uploads/2024/05/29100101/illustration-of-person-with-harmonious-mental-health-1200x800-1.jpg',
...
      route: 'student-chatbot',
    ),
  ];

  final List<_FeatureCardData> _connectManage = [
    const _FeatureCardData(
      title: 'Connect with a Counselor',
      image: 'https://bouve.northeastern.edu/wp-content/uploads/2023/05/what-do-mental-health-counselors-do-northeastern-graduate.webp',
      route: 'student-counselors',
    ),
    const _FeatureCardData(
      title: 'Appointments\n',
      image: 'https://3veta.com/wp-content/uploads/2021/11/66.-How-to-effectively-schedule-appointments.png',
...

  @override
  Widget build(BuildContext context) {
    return GestureDetector(
      onTap: () => FocusScope.of(context).unfocus(),
      child: Scaffold(
        key: const Key('studentHomeScreen'),
        backgroundColor: const Color.fromARGB(255, 242, 241, 248),
        appBar: AppBar(
          backgroundColor: const Color.fromARGB(255, 242, 241, 248),
          elevation: 0,
          leading: Builder(
            builder: (context) => IconButton(
...
                      children: [
                        Expanded(
                          child: Column(
                            crossAxisAlignment: CrossAxisAlignment.start,
                            children: [
                              Text(
                                'Welcome Back',
                                style: GoogleFonts.poppins(
                                  fontSize: 12,
                                  fontWeight: FontWeight.w500,
                                  color: Colors.white.withOpacity(0.8),
                                ),
                              ),
...
